<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/onboarding_scene">

    <View
        android:id="@+id/first_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary" />

    <View
        android:id="@+id/second_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#058C9D" />

    <View
        android:id="@+id/third_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E91E63" />

    <ImageView
        android:id="@+id/rotating_image"
        android:layout_width="700dp"
        android:layout_height="700dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/background_image"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.ashish.swipeanimation.SemicircularTextView
        android:id="@+id/semi_circle_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="-75dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/first_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/robot" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_heading_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_heading_view"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/first_image_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_description_view"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/first_heading_view" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/second_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/trophy" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/second_heading_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_heading_view"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/first_image_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/second_description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trophy_descrption"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/first_heading_view" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/third_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/gift" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/third_heading_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_heading_view"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/third_description_view"
        app:layout_constraintTop_toBottomOf="@id/first_image_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/third_description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/third_description_view"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/indicator_view_active"
        app:layout_constraintTop_toBottomOf="@id/third_heading_view" />

    <RelativeLayout
        android:id="@+id/action_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:weightSum="6"
        app:layout_constraintTop_toBottomOf="@id/indicator_view_first">

        <TextView
            android:id="@+id/action_button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/action_button_text"
            android:textAlignment="center"
            android:textSize="18sp" />

    </RelativeLayout>

    <View
        android:id="@+id/shine"
        android:layout_width="30dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/shine"
        android:rotation="20"
        app:layout_constraintBottom_toBottomOf="@id/action_button"
        app:layout_constraintStart_toStartOf="@id/action_button"
        app:layout_constraintTop_toTopOf="@id/action_button" />

    <View
        android:id="@+id/indicator_view_first"
        android:layout_width="@dimen/spacing_medium"
        android:layout_height="@dimen/spacing_medium"
        android:background="@drawable/background_indicator_disabled" />

    <View
        android:id="@+id/indicator_view_second"
        android:layout_width="@dimen/spacing_medium"
        android:layout_height="@dimen/spacing_medium"
        android:background="@drawable/background_indicator_disabled" />

    <View
        android:id="@+id/indicator_view_third"
        android:layout_width="@dimen/spacing_medium"
        android:layout_height="@dimen/spacing_medium"
        android:background="@drawable/background_indicator_disabled" />

    <View
        android:id="@+id/indicator_view_active"
        android:layout_width="@dimen/spacing_l_medium"
        android:layout_height="@dimen/spacing_medium"
        android:layout_marginHorizontal="2dp"
        android:background="@drawable/background_indicator_enabled" />

</androidx.constraintlayout.motion.widget.MotionLayout>